--- a/styles/index.css
+++ b/styles/index.css
@@ -26,15 +26,22 @@
 
 /* Each hoverable year as a box */
 
-.conainer a {
+a.year-link {
+    /* text-decoration: none; */
+    /* display: flex; */
+    /* width: 100%; */
+    /* height: 100%; */
+    align-items: center;
+    justify-items: center;
     text-decoration: none;
+    color: #fff;
 }
 
 .container .year {
     display: flex;
     align-content: center;
     justify-content: center;
-
+    text-decoration: none;
     height: 30vh;
     width: 60vw;
     margin: 30px;
