--- a/styles/index.css
+++ b/styles/index.css
@@ -26,17 +26,6 @@
 
 /* Each hoverable year as a box */
 
-a.year-link {
-    /* text-decoration: none; */
-    /* display: flex; */
-    /* width: 100%; */
-    /* height: 100%; */
-    align-items: center;
-    justify-items: center;
-    text-decoration: none;
-    color: #fff;
-}
-
 .container .year {
     display: flex;
     align-content: center;
@@ -55,6 +44,8 @@ a.year-link {
     filter: brightness(70%);
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
+
+    cursor: pointer;
 }
 
 .container .year:hover {
@@ -68,6 +59,7 @@ a.year-link {
     color: white;
     margin: auto;
     text-decoration: none;
+    font-weight: bold;
 }
 
 /* Mobile support */
